[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemy_jumper.gd" type="Script" id=1]
[ext_resource path="res://Assets/Charsets/jumper.png" type="Texture" id=2]
[ext_resource path="res://Assets/Animations/light.png" type="Texture" id=3]
[ext_resource path="res://enemy_hp_bar.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.4565

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.3, 0.3, 0.3, 1 ), Color( 10, 10, 10, 1 ), Color( 0.3, 0.3, 0.3, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "spin"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="enemy_jumper" type="Area2D"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
position = Vector2( 235.458, 191.49 )
rotation = 6.28319
collision_mask = 99328
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
rotation = 6.28319
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="jump_timer" type="Timer" parent="."]
wait_time = 3.5

[node name="anim" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 2 )

[node name="lighting" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 3.12

[node name="spinning" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/spin = SubResource( 3 )

[node name="delay" type="Timer" parent="."]
one_shot = true

[node name="enemy_hp_bar" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 18 )

[connection signal="timeout" from="jump_timer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
